Problem view modified (answer preview word wrap fixed)

--- a/src/app/problem/problem.component.sass
+++ b/src/app/problem/problem.component.sass
@@ -32,3 +32,5 @@
 #preview
     padding: 20px
     background-color: rgba(7,103,164,0.05)
+    word-wrap: break-word
+    width: 100%
